--- a/include/libfreenect2/config.h.in
+++ b/include/libfreenect2/config.h.in
@@ -51,6 +51,7 @@
 #cmakedefine LIBFREENECT2_WITH_VAAPI_SUPPORT
 
 #cmakedefine LIBFREENECT2_WITH_TURBOJPEG_SUPPORT
+#cmakedefine LIBFREENECT2_WITH_INTELMEDIASDK_SUPPORT
 
 #cmakedefine LIBFREENECT2_WITH_TEGRAJPEG_SUPPORT
 #define LIBFREENECT2_TEGRAJPEG_LIBRARY "@TegraJPEG_LIBRARIES@"
